Update visualization saving logic to prevent accumulation of files

--- a/.gitignore
+++ b/.gitignore
@@ -180,6 +180,7 @@ depression_prediction/*.md
 .github/*.md
 memory_xlstm.md
 model_edaic_xlstm/analysis/
+model_edaic_xlstm/# Approaches for Addressing Class Imbala.md
 
 *.json
 *.png
