--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
-torch
-numpy
-pyyaml
+# Core machine learning
+torch==2.1.2+cu121
+torchvision==0.16.2+cu121
+torchaudio==2.1.2
+numpy>=1.20.0
+pandas>=1.3.0
+scikit-learn>=1.0.0
+
+# Visualization
+matplotlib>=3.5.0
+seaborn>=0.11.0
+
+# Utilities
+tqdm>=4.62.0
+
+# For Jupyter notebooks (if needed)
+jupyter>=1.0.0
+ipykernel>=6.0.0
