--- a/.gitignore
+++ b/.gitignore
@@ -176,9 +176,6 @@ tests/
 
 E-DAIC/
 output/
-depression_prediction/*.md
-.github/*.md
-memory_xlstm.md
 model_edaic_xlstm/analysis/
 model_edaic_xlstm/# Approaches for Addressing Class Imbala.md
 
@@ -187,3 +184,5 @@ model_binary/results
 
 *.json
 *.png
+*.md
+*.csv
